# ADE

./: .gitignore  BC_ADE.asv  BC_ADE.m  BC_ADE_corrected.m  CITATION.cff  D_Tensor_ADE.asv  D_Tensor_ADE.m  LICENSE  README.md  R_ADE.m  Rt_ADE.m  Rxy_ADE.m  Rxyt_ADE.m  T_ADE.m  Tt_ADE.m  Txy_ADE.m  Txyt_ADE.m  Ylm.m  gauss_legendre.m  lambda_ADE.m
Old versions/: BC_ADE_Alerstam.m  BC_ADE_corrected.m  Ylm.m  lambda_ADE.m
Test/: BC_ADE_zeta.m  Compare_Tr_MC_ADE.m  Compare_Tr_MC_ADE2.asv  Compare_Tr_MC_ADE2.m  Compare_zez0_methods.m  Find_z0_from_MC.py  Fit_ze_on_TR.m  Fit_ze_on_TR_exptail.m  Tt_ADE_Alerstam.m  Tt_ADE_corrected.m  Tt_ADE_z0zefit.m  Tt_ADE_zefit.m  compare_z0_RWT.m  fit_attempts_nm.csv  fit_attempts_sumobj.csv  tr_fit_result_sumobj_coarse_refine.mat  tr_transmission_curves.mat  tr_transmission_curves_2.mat  tr_transmission_curves_3.mat  tr_transmission_curves_4.mat  tr_transmission_curves_iso.mat  tr_transmission_curves_paper0.mat  tr_transmission_curves_paper01.mat  tr_transmission_curves_paper09.mat  tr_transmission_curves_paper09_matched.mat  tr_transmission_curves_paper0_matched.mat  tr_transmission_curves_paper_iso_0.mat  (+15 more)
python/: README.md  __init__.py  pyproject.toml  pytest.ini
python/examples/: demo_general_anisotropic.py
python/src/generalized_ade/: __init__.py  boundary.py  diffusion.py  quadrature.py  reflectance.py  transmittance.py
python/tests/: test_boundary_reference.py  test_diffusion_reference.py  test_resolved_reference.py  test_smoke.py
python/tests/reference/: bc_reference.json  d_tensor_reference.json  resolved_reference.json
(+17 files in other folders)
